--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -66,7 +66,7 @@
                         {% if articleplacement.article.show_author or articleplacement.article.show_created %}
                             <div class="article article_nimg_ymet">
                                 <div class="headline article_headline">
-                                    <h2><a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">{{ articleplacement.article.headline|save }}</a></h2>
+                                    <h2><a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">{{ articleplacement.article.headline|safe }}</a></h2>
                                 </div>
                                 <div class="article_meta">
                                     {% if articleplacement.article.show_author %}
