--- a/templates/tougcomsys/firsthome/page.html
+++ b/templates/tougcomsys/firsthome/page.html
@@ -10,10 +10,10 @@
         <div class="content_image">
             {% if page.above_content_image_link %}
                 <a href="{{ page.above_content_image_link }}"{% if page.above_content_link_attributes %} {{ page.above_content_link_attributes }}{% endif %} >
-                    <img class="content_image" src="{{ page.above_content_image.url }}"{% if page.above_content_image_attributes %} {{ page.above_content_image_attributes|safe }}{% endif %}>     
+                    <img class="content_image" src="{{ page.above_content_image.url }}" alt="{{ page.above_content_image.alt_text }}" {% if page.above_content_image_attributes %} {{ page.above_content_image_attributes|safe }}{% endif %}>     
                 </a>
             {% else %}
-                <img class="content_image" src="{{ page.above_content_image.url }}"{% if page.above_content_image_attributes %} {{ page.above_content_image_attributes|safe }}{% endif %}>     
+                <img class="content_image" src="{{ page.above_content_image.url }}" alt="{{ page.above_content_image.alt_text }}" {% if page.above_content_image_attributes %} {{ page.above_content_image_attributes|safe }}{% endif %}>     
             {% endif %}
         </div>
     {% endif %}
@@ -35,10 +35,10 @@
         <div class="content_image">
             {% if page.below_content_image_link %}
                 <a href="{{ page.below_content_image_link }}"{% if page.below_content_link_attributes %} {{ page.below_content_link_attributes }}{% endif %} >
-                    <img class="content_image" src="{{ page.below_content_image.url }}"{% if page.below_content_image_attributes %} {{ page.below_content_image_attributes|safe }}{% endif %}>     
+                    <img class="content_image" src="{{ page.below_content_image.url }}" alt="{{ page.below_content_image.alt_text }}" {% if page.below_content_image_attributes %} {{ page.below_content_image_attributes|safe }}{% endif %}>     
                 </a>
             {% else %}
-                <img class="content_image" src="{{ page.below_content_image.url }}"{% if page.below_content_image_attributes %} {{ page.below_content_image_attributes|safe }}{% endif %}>     
+                <img class="content_image" src="{{ page.below_content_image.url }}" alt="{{ page.below_content_image.alt_text }}" {% if page.below_content_image_attributes %} {{ page.below_content_image_attributes|safe }}{% endif %}>     
             {% endif %}
         </div>
     {% endif %}
