--- a/templates/tougcomsys/firsthome/post.html
+++ b/templates/tougcomsys/firsthome/post.html
@@ -10,10 +10,10 @@
         <div class="content_image">
             {% if post.above_content_image_link %}
                 <a href="{{ post.above_content_image_link }}"{% if post.above_content_link_attributes %} {{ post.above_content_link_attributes }}{% endif %} >
-                    <img class="content_image" src="{{ post.above_content_image.url }}"{% if post.above_content_image_attributes %} {{ post.above_content_image_attributes|safe }}{% endif %}>     
+                    <img class="content_image" src="{{ post.above_content_image.url }}" alt="{{ post.above_content_image.alt_text }}" {% if post.above_content_image_attributes %} {{ post.above_content_image_attributes|safe }}{% endif %}>     
                 </a>
             {% else %}
-                <img class="content_image" src="{{ post.above_content_image.url }}"{% if post.above_content_image_attributes %} {{ post.above_content_image_attributes|safe }}{% endif %}>     
+                <img class="content_image" src="{{ post.above_content_image.url }}" alt="{{ post.above_content_image.alt_text }}" {% if post.above_content_image_attributes %} {{ post.above_content_image_attributes|safe }}{% endif %}>     
             {% endif %}
         </div>
     {% endif %}
@@ -35,10 +35,10 @@
         <div class="content_image">
             {% if post.below_content_image_link %}
                 <a href="{{ post.below_content_image_link }}"{% if post.below_content_link_attributes %} {{ post.below_content_link_attributes }}{% endif %} >
-                    <img class="content_image" src="{{ post.below_content_image.url }}"{% if post.below_content_image_attributes %} {{ post.below_content_image_attributes|safe }}{% endif %}>     
+                    <img class="content_image" src="{{ post.below_content_image.url }}" alt="{{ post.below_content_image.alt_text }}" {% if post.below_content_image_attributes %} {{ post.below_content_image_attributes|safe }}{% endif %}>     
                 </a>
             {% else %}
-                <img class="content_image" src="{{ post.below_content_image.url }}"{% if post.below_content_image_attributes %} {{ post.below_content_image_attributes|safe }}{% endif %}>     
+                <img class="content_image" src="{{ post.below_content_image.url }}" alt="{{ post.below_content_image.alt_text }}" {% if post.below_content_image_attributes %} {{ post.below_content_image_attributes|safe }}{% endif %}>     
             {% endif %}
         </div>
     {% endif %}
