--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -15,7 +15,7 @@
                             <div class="article article_yimg_ymet">
                                 <div class="list_image">
                                     <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">
-                                        <img src="{{ articleplacement.article.list_image.url }}" {{ articleplacement.article.list_image.list_image_attributes|safe }}>
+                                        <img src="{{ articleplacement.article.list_image.url }}" alt="{{ articleplacement.article.list_image.alt_text }}" {{ articleplacement.article.list_image.list_image_attributes|safe }}>
                                     </a>
                                 </div>
                                 <div class="headline article_headline">
@@ -49,7 +49,7 @@
                             <div class="article article_yimg_nmet">
                                 <div class="list_image">
                                     <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">
-                                        <img src="{{ articleplacement.article.list_image.image.url }}" {{ articleplacement.article.list_image.list_image_attributes|safe}}>
+                                        <img src="{{ articleplacement.article.list_image.image.url }}" alt="{{ articleplacement.article.list_image.image.alt_text }}" {{ articleplacement.article.list_image.list_image_attributes|safe}}>
                                     </a>
                                 </div>
                                 <div class="headline article_headline">
