--- a/templates/tougcomsys/firsthome/article.html
+++ b/templates/tougcomsys/firsthome/article.html
@@ -26,14 +26,18 @@
         </div>
     {% endif %}
     <div class="event_dates">
-        {% if event_dates.previous %}
-            <div class="event_date event_date_previous" >{{ event_dates.previous }}</div>
-        {% endif %}
-        {% if event_dates.now_or_next %}
-            <div class="event_date event_date_now_or_next" >{{ event_dates.now_or_next }}</div>
-        {% endif %}
-        {% if event_dates.next %}
-            <div class="event_date event_date_next" >{{ event_dates.next }}</div>
+        {% if article.descriptive_date %}
+            <div class="event_date event_date_now_or_next" >{{ article.descriptive_date }}</div>
+        {% else %}
+            {% if event_dates.previous %}
+                <div class="event_date event_date_previous" >{{ event_dates.previous }}</div>
+            {% endif %}
+            {% if event_dates.now_or_next %}
+                <div class="event_date event_date_now_or_next" >{{ event_dates.now_or_next }}</div>
+            {% endif %}
+            {% if event_dates.next %}
+                <div class="event_date event_date_next" >{{ event_dates.next }}</div>
+            {% endif %}
         {% endif %}
     </div>
     {% if event_dates.past or event_dates.future %}
